--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,4 @@ url: "https://folio.indexdata.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+theme: minima
