Configure posts permalinks at /news rather than default
Chose the style which is similar to id.com but excluded filename
extension. Other styles at docs/permalinks/

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,7 @@ url: "https://folio.indexdata.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+
+collections:
+  posts:
+    permalink: /news/:year/:month/:day/:title/
