--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ url: "https://folio.indexdata.com" # the base hostname & protocol for your site
 markdown: kramdown
 theme: minima
 
+exclude: [Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, vendor]
+
 collections:
   posts:
     permalink: /news/:year/:month/:day/:title/
