--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: FOLIO Developer
 #  line in _config.yml. It will appear in your document head meta (for
 #  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://dev.folio.org" # the base hostname & protocol for your site
+url: "http://dev.folio.org" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
