Follow move of RAMLs (DMOD-133)
For raml-module-builder pull/37

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -9,8 +9,8 @@ okapi:
     ramlutil: null
 
 raml-module-builder:
-  - label: domain-models-runtime
-    directory: domain-models-runtime/src/main/resources/raml
+  - label: domain-models-api-interfaces
+    directory: domain-models-api-interfaces/src/main/resources/raml
     files: [admin, jobs, sample, tenant]
     ramlutil: raml-util
 
