Moved tenant.raml to new shared section in "raml" repo (DMOD-133)

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -8,10 +8,16 @@ okapi:
     files: [okapi]
     ramlutil: null
 
+raml:
+  - label: shared
+    directory: ramls
+    files: [tenant]
+    ramlutil: .
+
 raml-module-builder:
   - label: domain-models-api-interfaces
     directory: domain-models-api-interfaces/src/main/resources/raml
-    files: [admin, jobs, sample, tenant]
+    files: [admin, jobs, sample]
     ramlutil: raml-util
 
 mod-acquisitions:
