Follow rename of RAML files: mod-metadata (DMOD-133)

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -51,7 +51,7 @@ mod-metadata:
     ramlutil: doc/api/shared
   - label: inventory-storage
     directory: inventory-storage/ramls
-    files: [instance_storage, item_storage]
+    files: [instance-storage, item-storage]
     ramlutil: inventory-storage/raml-util
 
 mod-users:
