Follow removal of RAML files: mod-metadata (DMOD-133)
Removed catalogue and knowledgebase
Renamed inventory

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -45,9 +45,9 @@ mod-configuration:
     ramlutil: raml-util
 
 mod-metadata:
-  - label: null
-    directory: doc/api
-    files: [catalogue, inventory, knowledgebase]
+  - label: inventory
+    directory: doc/api/inventory
+    files: [inventory]
     ramlutil: doc/api/shared
   - label: inventory-storage
     directory: inventory-storage/ramls
