--- a/_data/api.yml
+++ b/_data/api.yml
@@ -32,6 +32,16 @@ mod-acquisitions-postgres:
     files: [acquisitions]
     ramlutil: raml-util
 
+mod-auth:
+  - label: login_module
+    directory: login_module/ramls
+    files: [login]
+    ramlutil: null
+  - label: permissions_module
+    directory: permissions_module/ramls
+    files: [permissions]
+    ramlutil: null
+
 mod-circulation:
   - label: null
     directory: ramls/circulation
