Add raml-util for okapi (DMOD-133)

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -6,7 +6,7 @@ okapi:
   - label: null
     directory: okapi-core/src/main/raml
     files: [okapi]
-    ramlutil: null
+    ramlutil: okapi-core/src/main/raml/raml-util
 
 raml:
   - label: shared
