Add groups.raml for mod-users (DMOD-133)

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -67,5 +67,5 @@ mod-metadata:
 mod-users:
   - label: null
     directory: ramls
-    files: [users]
+    files: [groups, users]
     ramlutil: raml-util
