Add api.yml raml/ramls/tenantPermissions.raml (DMOD-133)

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -11,7 +11,7 @@ okapi:
 raml:
   - label: shared
     directory: ramls
-    files: [tenant]
+    files: [tenant, tenantPermissions]
     ramlutil: .
 
 raml-module-builder:
