--- a/_data/api.yml
+++ b/_data/api.yml
@@ -61,7 +61,7 @@ mod-metadata:
     ramlutil: doc/api/shared
   - label: inventory-storage
     directory: inventory-storage/ramls
-    files: [instance-storage, item-storage]
+    files: [instance-storage, item-storage, material-type]
     ramlutil: inventory-storage/raml-util
 
 mod-users:
@@ -69,7 +69,7 @@ mod-users:
     directory: ramls
     files: [groups, users]
     ramlutil: raml-util
-    
+
 mod-users-bl:
   - label: null
     directory: ramls
