mod-auth: add permission_interface.raml (DMOD-133)

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -39,7 +39,7 @@ mod-auth:
     ramlutil: null
   - label: permissions_module
     directory: permissions_module/ramls
-    files: [permissions]
+    files: [permissions, permission_interface]
     ramlutil: null
 
 mod-circulation:
