--- a/_data/api.yml
+++ b/_data/api.yml
@@ -5,79 +5,100 @@
 okapi:
   - label: null
     directory: okapi-core/src/main/raml
-    files: [okapi]
+    files:
+      - okapi
     ramlutil: okapi-core/src/main/raml/raml-util
 
 raml:
   - label: shared
     directory: ramls
-    files: [tenant, tenantPermissions]
+    files:
+      - tenant
+      - tenantPermissions
     ramlutil: .
 
 raml-module-builder:
   - label: domain-models-api-interfaces
     directory: domain-models-api-interfaces/src/main/resources/raml
-    files: [admin, jobs, sample]
+    files:
+      - admin
+      - jobs
+      - sample
     ramlutil: raml-util
 
 mod-acquisitions:
   - label: null
     directory: ramls/acquisitions
-    files: [acquisitions]
+    files:
+      - acquisitions
     ramlutil: raml-util
 
 mod-acquisitions-postgres:
   - label: null
     directory: ramls/acquisitions
-    files: [acquisitions]
+    files:
+      - acquisitions
     ramlutil: raml-util
 
 mod-auth:
   - label: login_module
     directory: login_module/ramls
-    files: [login]
+    files:
+      - login
     ramlutil: null
   - label: permissions_module
     directory: permissions_module/ramls
-    files: [permissions, permission_interface]
+    files:
+      - permissions
+      - permission_interface
     ramlutil: null
 
 mod-circulation:
   - label: null
     directory: ramls
-    files: [circulation]
+    files:
+      - circulation
     ramlutil: raml-util
 
 mod-configuration:
   - label: null
     directory: ramls/configuration
-    files: [config]
+    files:
+      - config
     ramlutil: raml-util
 
 mod-metadata:
   - label: inventory
     directory: doc/api/inventory
-    files: [inventory]
+    files:
+      - inventory
     ramlutil: doc/api/shared
   - label: inventory-storage
     directory: inventory-storage/ramls
-    files: [instance-storage, item-storage, material-type]
+    files:
+      - instance-storage
+      - item-storage
+      - material-type
     ramlutil: inventory-storage/raml-util
 
 mod-users:
   - label: null
     directory: ramls
-    files: [groups, users]
+    files:
+      - groups
+      - users
     ramlutil: raml-util
 
 mod-users-bl:
   - label: null
     directory: ramls
-    files: [mod-users-bl]
+    files:
+      - mod-users-bl
     ramlutil: null
 
 mod-loan-storage:
   - label: null
     directory: ramls
-    files: [loan-storage]
+    files:
+      - loan-storage
     ramlutil: raml-util
