--- a/_data/api.yml
+++ b/_data/api.yml
@@ -73,6 +73,7 @@ mod-circulation-storage:
     directory: ramls
     files:
       - loan-storage
+      - loan-policy-storage
     ramlutil: raml-util
 
 mod-configuration:
