Adjust config mod-configuration to ramls/raml-util RMB-30

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -81,7 +81,7 @@ mod-configuration:
     directory: ramls/configuration
     files:
       - config
-    ramlutil: raml-util
+    ramlutil: ramls/raml-util
 
 mod-inventory:
   - label: null
