Add mod-circulation-storage loan-rules-storage.raml DMOD-133

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -74,6 +74,7 @@ mod-circulation-storage:
     files:
       - loan-storage
       - loan-policy-storage
+      - loan-rules-storage
     ramlutil: raml-util
 
 mod-configuration:
