Add config mod-users addressTypes.raml DMOD-133

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -31,6 +31,7 @@ raml:
     files:
       - groups
       - users
+      - addressTypes
     ramlutil: .
   - label: shared-mod-users-bl
     directory: ramls/mod-users-bl
