Adjust config mod-circulation to raml/raml-util RMB-30

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -67,7 +67,7 @@ mod-circulation:
     directory: ramls
     files:
       - circulation
-    ramlutil: raml-util
+    ramlutil: ramls/raml-util
 
 mod-circulation-storage:
   - label: null
