Adjust config mod-acquisitions to ramls/raml-util RMB-30

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -53,7 +53,7 @@ mod-acquisitions:
     directory: ramls/acquisitions
     files:
       - acquisitions
-    ramlutil: raml-util
+    ramlutil: ramls/raml-util
 
 mod-acquisitions-postgres:
   - label: null
