Adjust config mod-acquisitions-postgres to ramls/raml-util RMB-30

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -60,7 +60,7 @@ mod-acquisitions-postgres:
     directory: ramls/acquisitions
     files:
       - acquisitions
-    ramlutil: raml-util
+    ramlutil: ramls/raml-util
 
 mod-circulation:
   - label: null
