Add mod-circulation-storage request-storage.raml DMOD-133

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -76,6 +76,7 @@ mod-circulation-storage:
       - loan-storage
       - loan-policy-storage
       - loan-rules-storage
+      - request-storage
     ramlutil: raml-util
 
 mod-configuration:
