Adjust config mod-inventory-storage to raml/raml-util RMB-30

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -101,7 +101,7 @@ mod-inventory-storage:
       - item-storage
       - loan-type
       - material-type
-    ramlutil: raml-util
+    ramlutil: ramls/raml-util
 
 mod-notes:
   - label: null
