Adjust api.yml config mod-inventory RMB-30

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -88,10 +88,10 @@ mod-configuration:
 
 mod-inventory:
   - label: null
-    directory: doc/api/inventory
+    directory: ramls
     files:
       - inventory
-    ramlutil: doc/api/shared
+    ramlutil: ramls/raml-util
 
 mod-inventory-storage:
   - label: null
