Utilise theme ability "Home" link each navbar

--- a/_data/text-for.yml
+++ b/_data/text-for.yml
@@ -1,7 +1,7 @@
 # Language customization for default theme elements
 
 # Menu item
-tHome: Home
+tHome: FOLIO Developer
 
 # Title on home page
 tPosts: Posts
