Add mod-notify to api.yml DMOD-133

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -109,3 +109,10 @@ mod-notes:
     files:
       - note
     ramlutil: ramls/raml-util
+
+mod-notify:
+  - label: null
+    directory: ramls
+    files:
+      - notify
+    ramlutil: ramls/raml-util
