Add mod-login-saml to api.yml DMOD-133

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -103,6 +103,13 @@ mod-inventory-storage:
       - material-type
     ramlutil: ramls/raml-util
 
+mod-login-saml:
+  - label: null
+    directory: ramls
+    files:
+      - saml-login
+    ramlutil: null
+
 mod-notes:
   - label: null
     directory: ramls
