Revert "Merge pull request #71 from folio-org/FOLIO-829-new-theme-cjt"
This reverts commit dc2a782394ac8443cf911404956bfe4c5e52d07e, reversing
changes made to cc34319d321c47515d64057e544d4d2088d1121d.

--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,7 @@ google_analytics: UA-79833310-3
 
 # Build settings
 markdown: kramdown
-theme: classic-jekyll-theme
-plugins:
-  - jekyll-data
-  - jekyll-feed
+theme: minima
 
 exclude: [Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, vendor, work]
 
