Add items to dev navbar

--- a/_data/text-for.yml
+++ b/_data/text-for.yml
@@ -1,7 +1,7 @@
 # Language customization for default theme elements
 
 # Menu item
-tHome: FOLIO Developer
+tHome: dev.FOLIO.org
 
 # Title on home page
 tPosts: Posts
