Add bin/htmlproofer.sh FOLIO-837
Thanks to “html-proofer”

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
-exclude: [Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, vendor, work]
+exclude: [bin, Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, tmp, vendor, work]
 
 collections:
   posts:
