Update api.yml FOLIO-903
Add shelf-location for mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -88,6 +88,7 @@ mod-inventory-storage:
       - item-storage
       - loan-type
       - material-type
+      - shelf-location
     ramlutil: ramls/raml-util
 
 mod-login-saml:
