Update api docs config FOLIO-903
Add proxiesFor to raml mod-users

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -32,6 +32,7 @@ raml:
       - groups
       - users
       - addressTypes
+      - proxiesFor
     ramlutil: .
   - label: shared-mod-users-bl
     directory: ramls/mod-users-bl
