Added functionality to the jekyll theme - left hand navigation you can now add a file to the left hand nav under a heading or not under a heading.

--- a/_data/devguides.yml
+++ b/_data/devguides.yml
@@ -1,7 +1,10 @@
-- title: Server Side
+- title: None
+  devguides:
+  - index
+- title: None
   devguides:
   - modules
-- title: Client Side
+- title: None
   devguides:
   - userinterface
 - title: System
