--- a/_data/reference.yml
+++ b/_data/reference.yml
@@ -1,6 +1,9 @@
-- title: API Reference
+- title: None
+  reference:
+  - index
+- title: None
   reference: 
   - apiindex
-- title: Terms and Technologies
+- title: None
   reference:
   - glossary
