Update api docs config FOLIO-903
Add instance-format, instance-type, classification-type,
contributor-type, creator-type, identifier-type for
mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -86,7 +86,13 @@ mod-inventory-storage:
     directory: ramls
     files:
       - instance-storage
+      - instance-format
+      - instance-type
       - item-storage
+      - classification-type
+      - contributor-type
+      - creator-type
+      - identifier-type
       - loan-type
       - material-type
       - shelf-location
