--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ version: 0.2
 phases:
   install:
     commands:
-       - gem install
+       - bundle install
   #pre_build:
     #commands:
       # - command
