Update api docs config FOLIO-903
Add holdings-storage for mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -90,6 +90,7 @@ mod-inventory-storage:
   - label: null
     directory: ramls
     files:
+      - holdings-storage
       - instance-storage
       - instance-format
       - instance-type
