Enable CodeBuild cache of Ruby Gems
NOTE: CloudFormation does not have a way to configure the S3 Bucket
used for the CodeBuild cache (even though this stack template does
create the S3 bucket).  One must go into the [CodeBuild console](https://console.aws.amazon.com/codebuild/home?region=us-east-1#/projects/DevDocJekyllBuild/update) for `DevDocJekyllBuild` and set the cache bucket
until AWS provides a way for us to define this in the stack template.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ version: 0.2
 phases:
   install:
     commands:
-       - bundle install
+       - bundle install --path vendor/bundle
   #pre_build:
     #commands:
       # - command
@@ -30,3 +30,6 @@ phases:
     # - location
   #discard-paths: yes
   #base-directory: location
+cache:
+  paths:
+    - 'vendor/**/*'
