--- a/work/amazon-web-services/dev-folio-org-branch_cloudformation.yml
+++ b/work/amazon-web-services/dev-folio-org-branch_cloudformation.yml
@@ -20,7 +20,7 @@ Resources:
   DevDocBranchBucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: !Sub "${DevDocBranchLabel}.dev.folio.org"
+      BucketName: !Sub "${DevDocBranchLabel}.${DevDocDNSName}"
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
@@ -28,8 +28,8 @@ Resources:
   DevDocBranchRecordSet:
     Type: 'AWS::Route53::RecordSet'
     Properties:
-      HostedZoneName: dev.folio.org.
-      Name: !Sub "${DevDocBranchLabel}.dev.folio.org."
+      HostedZoneName: !Sub "${DevDocDNSName}."
+      Name: !Sub "${DevDocBranchLabel}.${DevDocDNSName}."
       Type: A
       AliasTarget:
         HostedZoneId: !FindInMap [ RegionMap, !Ref 'AWS::Region', S3hostedzoneID]
@@ -38,6 +38,9 @@ Parameters:
   DevDocBranchLabel:
     Type: String
     Description: The Git branch label
+  DevDocDNSName:
+    Type: String
+    Default: dev.folio.org
 Mappings:
   RegionMap:
     us-east-1:
