Fix YAML syntax error

--- a/work/amazon-web-services/dev-folio-org-master_cloudformation.yml
+++ b/work/amazon-web-services/dev-folio-org-master_cloudformation.yml
@@ -288,7 +288,7 @@ Resources:
         HttpVersion: http2
         IPV6Enabled: true
         Aliases:
-          - !Ref: DevDocDNSName
+          - !Ref DevDocDNSName
         DefaultCacheBehavior:
           AllowedMethods:
             - GET
